# alpha

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: main.yml
examples/: blocks.alpha  builtin.alpha  constructors.alpha  custom_constructor.alpha  custom_constructors_do_not_conflict.alpha  custom_print.alpha  global_let_bindings.alpha  local_let_bindings.alpha  method_override.alpha  multimethods.alpha  print.alpha  strings.alpha  types.alpha
llvm/: Cargo.toml  build.rs
llvm/src/: basic_block.rs  builder.rs  context.rs  error.rs  gc.rs  init.rs  lib.rs  llvm-gc.cpp  module.rs  pass_manager.rs  pass_registry.rs  string.rs  types.rs  values.rs
llvm/src/gc/: shadow_stack.rs
llvm/src/orc/: lljit.rs  mod.rs  thread_safe.rs
src/: compiler.rs  dispatch.rs  env.rs  execution_session.rs  exp.rs  gc.rs  init.rs  irgen.rs  lexer.rs  lib.rs  llvm-gc.cpp  main.rs  parser.rs  sexp.rs  stdlib.rs  string.rs  svec.rs  symbol.rs  types.rs
src/ast/: exp.rs  lexer.rs  mod.rs  parser.rs  sexp.rs  types.rs
src/gc/: roots.rs
src/hir/: free_global_vars.rs  hir.rs  hirgen.rs  inline_var_alias.rs  mod.rs
src/types/: alpha_value.rs  any.rs  datatype.rs  init.rs  method.rs  primitive.rs  string.rs  svec.rs  symbol.rs  type.rs  void.rs
tests/: goldentests.rs  run_test.rs  simple.rs
tests/golden/: custom_constructor.alpha  print.alpha  strings.alpha
