[package]
name = "alpha"
version = "0.1.0"
edition = "2018"

[features]
debug = ["gc_debug"]
gc_debug = []

[dependencies]
llvm = { path = "./llvm" }
logos = "0.12.0"
simple-error = "0.2.3"
ctor = "0.1.21"
paste = "1.0.6"
pretty-hex = "0.2.1"
backtrace = "0.3"
region = "3.0.0"
once_cell = "1.8.0"
alloca = "0.3.3"
tracing = "0.1.29"

# bin dependencies
tracing-subscriber = { version = "0.3.1", features = ["tracing-log", "env-filter"] }
rustyline = "8.0.0"
rustyline-derive = "0.5.0"
atty = "0.2.14"

[dev-dependencies]
serial_test = "0.5.1"

[workspace]
members = [
  "llvm",
]
